Add id tag to reset button

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <div id="frame">
             <div id="header">
-                <button type="button" value="reset"><p>Reset</p></button>
+                <button type="button" id="reset" value="reset"><p>Reset</p></button>
                 <button type="button" value="black-and-white"><p>B/W</p></button>
                 <button type="button" value="random"><p>Magic</p></button>
             </div>
