Change texts and tags of buttons

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <body>
         <div id="frame">
             <div id="header">
-                <button type="button" id="reset" value="reset"><p>Reset</p></button>
-                <button type="button" value="black-and-white"><p>B/W</p></button>
-                <button type="button" value="random"><p>Magic</p></button>
+                <button type="button" id="bnw" value="black-and-white"><p>B/W</p></button>
+                <button type="button" id="gradation" value="gradation"><p>Gradation</p></button>
+                <button type="button" id="random" value="random"><p>Magic</p></button>
             </div>
             <div id="main">
                 <div id="canvas">
